--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+            <link href='http://fonts.googleapis.com/css?family=Open+Sans:600,700' rel='stylesheet'>
+
+            <link href="{{ asset('/assets/css/main.css') }}" rel="stylesheet" />
+            <link href="{{ asset('/assets/css/radio.css') }}" rel="stylesheet" />
+        {% endblock %}
+
+        {% block javascripts %}
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <script src="{{ asset('/assets/js/main.js') }}"></script>
+        {% endblock %}
     </head>
+
     <body>
-        {% block body %}bla{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block navigation %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
     </body>
+
+    <section id="footer">
+        <footer>
+            {% block footer %}{% endblock %}
+        </footer>
+    </section>
 </html>
