--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -41,5 +41,11 @@
     </div>
 {% endblock %}
 {% block footer %}
-    Test_Shop
+     <div>
+        <p class="copyright text-muted">
+            Copyright &copy;
+            <a href="mailto:koobetone@gmail.com" class="site-email">Pavel Buchyn</a>
+            Test Website 2018
+        </p>
+    </div>
 {% endblock %}
