--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -44,7 +44,7 @@
      <div>
         <p class="copyright text-muted">
             Copyright &copy;
-            <a href="mailto:koobetone@gmail.com" class="site-email">Pavel Buchyn</a>
+            <a href="http://pavelbuchyn.in.ua/" target="_blank"">Pavel Buchyn</a>
             Test Website 2018
         </p>
     </div>
